[gd_scene load_steps=5 format=3 uid="uid://cf4duabfcn6fa"]

[ext_resource type="Script" uid="uid://dhsidn57865q0" path="res://Scripts/hit_flash_component.gd" id="1_i7b4d"]

[sub_resource type="Animation" id="Animation_5km1q"]
resource_name = "quick_flash"
length = 0.80002004
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:flash_color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.8, 0.0, 0.8]
}

[sub_resource type="Animation" id="Animation_4u2o6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:flash_color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4u2o6"]
_data = {
&"RESET": SubResource("Animation_4u2o6"),
&"quick_flash": SubResource("Animation_5km1q")
}

[node name="HitFlashComponent" type="Node2D"]
script = ExtResource("1_i7b4d")

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4u2o6")
}

[connection signal="timeout" from="FlashTimer" to="." method="_on_flash_timer_timeout"]
